# RizLang

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists_check.txt  LICENSE  Makefile  README.md  bench_gpu.py  bench_gpu.riz  build.bat  build_and_check.ps1  build_ggml.bat  build_llama_cli_plugin.bat  build_python.bat  build_torch.bat  chat_demo.riz  check_gpu_direct.cpp  linux_log.txt  pi_bench.riz  setup.bat  setup_libtorch.ps1  test_if_paren.riz  test_inference.riz  test_io.txt  test_stdlib.riz
_idx_test/: packages.index  riz.deps
_pkg_git_test/: riz.json
_pkg_mojo_test/: riz.deps
_pkg_smoke/: riz.json
build_check/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  check_gpu_direct.vcxproj  check_gpu_direct.vcxproj.filters  cmake_install.cmake  cuda_check.sln
examples/: LLAMA_INFER.md  README.md  aot_test.riz  attention_test.riz  bench_loop.py  bench_nested.py  bench_nested.riz  demo.riz  fibonacci.riz  fizzbuzz.riz  hello.riz  import_demo.riz  infer_llama.riz  interpreter_smoke.riz  math.riz  phase2_demo.riz  phase3_demo.riz  phase4_demo.riz  phase5_demo.riz  pkg_vendor_lib.riz  plugin_ggml.c  plugin_llama_cli.c  plugin_tensor.c  plugin_torch.cpp  python_demo.riz  stdlib_builtins_demo.riz  struct_demo.riz  tensor_test.riz  train_demo.riz  train_sine.riz  vm_import_client.riz  vm_test.riz
lsp/: README.md  package-lock.json  package.json  tsconfig.json
riz_release/: build.bat  build_ggml.bat  build_llama_cli_plugin.bat  build_python.bat  build_torch.bat
src/: Riz.code-workspace  aot_runtime.c  aot_runtime.h  (+36 more)
(+126 files in other folders)
